# SNRAware

./: .gitignore  pyproject.toml
docs/: index.md
scripts/: ai.code-workspace  inference_osii-data.py
src/snraware/projects/mri/denoising/: run_inference.py
